--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Techniques d'intégration web 2 - Projet Final</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar headerNav">
+            <div class="headerNav__flex">
+                <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve" href="index.html">
+                <form class="container-fluid">
+                    <button class="btn btn-outline-success me-2" type="button">Roller Skate</button>
+                    <button class="btn btn-outline-success me-2" type="button">Arts</button>
+                    <button class="btn btn-outline-success me-2" type="button">Automobile</button>
+                </form>
+            </div>
+        </nav>
+    </header>
+
 </body>
+
 </html>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+</script>
+
+</script>
