--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Techniques d'intégration web 2 - Projet Final</title>
+    <meta name="description" content="Une page représentant moi et mes hobbies" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -16,15 +23,22 @@
     <header>
         <nav class="navbar headerNav">
             <div class="headerNav__flex">
-                <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve" href="index.html">
-                <form class="container-fluid">
-                    <button class="btn btn-outline-success me-2" type="button">Roller Skate</button>
-                    <button class="btn btn-outline-success me-2" type="button">Arts</button>
-                    <button class="btn btn-outline-success me-2" type="button">Automobile</button>
-                </form>
+                <div class="headerNav__flex--logo">
+                    <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve" href="index.html">
+                    <h1>Lindsay Lemire</h1>
+                </div>
+                    <form class="container-fluid headerNav__flex--menu">
+                        <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
+                        <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
+                    </form>
             </div>
         </nav>
     </header>
+
+    <main></main>
+
+    <footer></footer>
 
 </body>
 
