--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -27,16 +30,34 @@
                     <img class="header__logo" src="images/logo.svg" alt="Logo oiseau mauve" href="index.html">
                     <h1>Lindsay Lemire</h1>
                 </div>
-                    <form class="container-fluid headerNav__flex--menu">
-                        <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
-                    </form>
+                <form class="container-fluid headerNav__flex--menu">
+                    <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
+                    <a class="btn me-2" type="button" href="arts.html">Arts</a>
+                    <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
+                </form>
             </div>
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <div class="container">
+            <section class="section__presentation">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="presentation__photo">
+                            <img src="images/moi.jpg" class="image__moi" alt="Une photo de moi">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <h2>Un site à propos de moi...</h2>
+                        <div class="col-lg-2">
+                            <a class="icon__loisir" href="#"><img class="icon__loisir--images" src="images/rollerskate.svg" alt="icon de roller skate"</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 
     <footer></footer>
 
