--- a/index.html
+++ b/index.html
@@ -50,10 +50,88 @@
                     </div>
                     <div class="col-lg-6">
                         <h2>Un site à propos de moi...</h2>
-                        <div class="col-lg-2">
-                            <a class="icon__loisir" href="#"><img class="icon__loisir--images" src="images/rollerskate.svg" alt="icon de roller skate"</a>
+                        <div class="icon__loisir--flex">
+                            <div class="col-lg-2 offset-lg-0">
+                                <a class="icon__loisir--roller" href="#section__rollerskate"><img
+                                        class="icon__loisir--images" src="images/rollerskate.svg"
+                                        alt="icon de roller skate" /></a>
+                            </div>
+                            <div class="col-lg-2 offset-lg-2">
+                                <a class="icon__loisir--arts" href="#section__arts"><img class="icon__loisir--images"
+                                        src="images/arts.svg" alt="icon d'arts" /></a>
+                            </div>
+                            <div class="col-lg-2 offset-lg-2">
+                                <a class="icon__loisir--auto" href="#section__automobile"><img class="icon__loisir--images"
+                                        src="images/auto.svg" alt="icon d'automobile" /></a>
+                            </div>
+                        </div>
+                        <div class="section__presentation--text">
+                            <p>
+                                Pour ce projet j'ai décider de présenter mes loisirs en de dehor de l'école
+                            </p>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <section id="section__rollerskate">
+                <div class="row">
+                    <h2>Roller Skate</h2>
+                    <div class="col-lg-12">
+                        <iframe class="section__rollerskate--video" width="560" height="315"
+                            src="https://www.youtube.com/embed/kPcEFHA3X0c" title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </section>
+
+            <section id="section__arts">
+                <div class="row">
+                    <h2>Arts</h2>
+                    <div class="offset-xl-4 col-xl-3">
+                        <img src="images/artimg7.jpg" class="image__grille" alt="Photo dune colombe">
+                    </div>
+                    <div class="offset-xl-0 col-xl-4">
+                        <img src="images/artimg1.jpg" class="image__grille--tablette1" alt="Photo d'un dessin sur tablette">
+                    </div>
+                    <div class="offset-xl-0 col-xl-4">
+                        <img src="images/artimg2.jpg" class="image__grille" alt="Dessin en couleurs">
+                    </div>
+                    <div class="offset-xl-0 col-xl-4">
+                        <img src="images/artimg3.jpg" class="image__grille--fusain" alt="Dessin au fusain">
+                    </div>
+                    <div class="offset-xl-0 col-xl-4">
+                        <img src="images/artimg4.jpg" class="image__grille--diamondpainting" alt="Diamond painting">
+                    </div>
+                    <div class="offset-xl-2 col-xl-4">
+                        <img src="images/artimg5.jpg" class="image__grille" arl="Dessin sur tablette">
+                    </div>
+                    <div class="offset-xl-0 col-xl-3">
+                        <img src="images/artimg6.jpg" class="image__grille--crane" alt="Photo d'un crane">
+                    </div>
+                </div>
+            </section>
+
+            <section id="section__automobile">
+                <div class="row">
+                    <h2>Automobile</h2>
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/indexcarrousel1.jpeg" class="d-block w-100" alt="Kia, subaru, mitsubishi">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/indexcarrousel2.jpeg" class="d-block w-100" alt="Mitsubishi de côté">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/indexcarrousel3.jpeg" class="d-block w-100" alt="Kia, subaru, mitsubishi en angle">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/indexcarrousel4.jpeg" class="d-block w-100" alt="mitsubishi de derrière">
+                          </div>
+                        </div>
+                      </div>
                 </div>
             </section>
         </div>
