--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                                         src="images/arts.svg" alt="icon d'arts" /></a>
                             </div>
                             <div class="col-lg-2 offset-lg-2">
-                                <a class="icon__loisir--auto" href="#section__automobile"><img class="icon__loisir--images"
-                                        src="images/auto.svg" alt="icon d'automobile" /></a>
+                                <a class="icon__loisir--auto" href="#section__automobile"><img
+                                        class="icon__loisir--images" src="images/auto.svg"
+                                        alt="icon d'automobile" /></a>
                             </div>
                         </div>
                         <div class="section__presentation--text">
@@ -93,7 +94,8 @@
                         <img src="images/artimg7.jpg" class="image__grille" alt="Photo dune colombe">
                     </div>
                     <div class="offset-xl-0 col-xl-4">
-                        <img src="images/artimg1.jpg" class="image__grille--tablette1" alt="Photo d'un dessin sur tablette">
+                        <img src="images/artimg1.jpg" class="image__grille--tablette1"
+                            alt="Photo d'un dessin sur tablette">
                     </div>
                     <div class="offset-xl-0 col-xl-4">
                         <img src="images/artimg2.jpg" class="image__grille" alt="Dessin en couleurs">
@@ -118,26 +120,54 @@
                     <h2>Automobile</h2>
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
-                            <img src="images/indexcarrousel1.jpeg" class="d-block w-100" alt="Kia, subaru, mitsubishi">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="images/indexcarrousel2.jpeg" class="d-block w-100" alt="Mitsubishi de côté">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="images/indexcarrousel3.jpeg" class="d-block w-100" alt="Kia, subaru, mitsubishi en angle">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="images/indexcarrousel4.jpeg" class="d-block w-100" alt="mitsubishi de derrière">
-                          </div>
+                            <div class="carousel-item active">
+                                <img src="images/indexcarrousel1.jpeg" class="d-block w-100"
+                                    alt="Kia, subaru, mitsubishi">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/indexcarrousel2.jpeg" class="d-block w-100" alt="Mitsubishi de côté">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/indexcarrousel3.jpeg" class="d-block w-100"
+                                    alt="Kia, subaru, mitsubishi en angle">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/indexcarrousel4.jpeg" class="d-block w-100"
+                                    alt="mitsubishi de derrière">
+                            </div>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </section>
         </div>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row">
+            <div class="offset-xl-0 col-xl-6">
+                <p>intégration des interfaces Web 2 - Projet Final</p>
+                <p>Lindsay Lemire</p>
+            </div>
+            <div class="col-xl-6 footer--leftalign">
+                <img src="images/facebook-icon.png" class="footer__mediaicon" alt="Icon facebook">
+                <img src="images/instagram-icon.png" class="footer__mediaicon" alt="Icon instagram">
+                <img src="images/twitter-icon.png" class="footer__mediaicon" alt="Icon twitter">
+                <img src="images/linkedin-icon.png" class="footer__mediaicon" alt="Icon linkedin">
+            </div>
+            <div class="offset-xl-6 col-xl-6 footer--leftalign">
+                <div class="footer--joindre">
+                    <img src="images/tel.svg" class="footer__mediaicon" alt="Icon téléphone">
+                    <a href="tel:+18193844571">819 384-4571</a>
+                </div>
+                <div class="footer--joindre">
+                    <img src="images/mail.svg" class="footer__mediaicon" alt="Icon mail">
+                    <a href="mailto:lindsay_lemire@hotmail.com">lindsay_lemire@hotmail.com</a>
+                </div>
+            </div>
+        </div>
+        </div>
+    </footer>
 
 </body>
 
