correction de alt attribu

--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                         <img src="images/artimg7.jpg" class="image__grille" alt="Photo dune colombe">
                     </div>
                     <div class="offset-xl-0 col-xl-4">
-                        <img src="images/artimg1.jpg" class="image__grille--tablette1"
-                            alt="Photo d'un dessin sur tablette">
+                        <img src="images/artimg1.jpg" class="image__grille--tablette1" alt="Photo d'un dessin sur tablette">
                     </div>
                     <div class="offset-xl-0 col-xl-4">
                         <img src="images/artimg2.jpg" class="image__grille" alt="Dessin en couleurs">
