--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <img src="images/artimg4.jpg" class="image__grille--diamondpainting" alt="Diamond painting">
                     </div>
                     <div class="offset-xl-2 col-xl-4">
-                        <img src="images/artimg5.jpg" class="image__grille" arl="Dessin sur tablette">
+                        <img src="images/artimg5.jpg" class="image__grille" alt="Dessin sur tablette">
                     </div>
                     <div class="offset-xl-0 col-xl-3">
                         <img src="images/artimg6.jpg" class="image__grille--crane" alt="Photo d'un crane">
