installation manifest dans index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Techniques d'intégration web 2 - Projet Final</title>
     <meta name="description" content="Une page représentant moi et mes hobbies" />
 
+    <link rel="manifest" href="/manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Weather PWA">
+    <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+    <meta name="description" content="A sample weather app">
+    <meta name="theme-color" content="#131313" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
