--- a/rollerskate.html
+++ b/rollerskate.html
@@ -74,7 +74,7 @@
             </div>
             <nav class="navbar navbar-dark headerNav__burger">
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row row--cardrollerskate">
 
                         <div class="navbar__burger--flex">
                             <div class="headerNav__flex--logo">
@@ -101,43 +101,6 @@
 
     <main>
         <div class="container">
-            <section class="section__presentation">
-                <div class="row">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                        <div class="presentation__photo">
-                            <img src="images/moi.jpg" class="image__moi" alt="Une photo de moi">
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                        <h2>Un site à propos de moi...</h2>
-                        <div class="icon__loisir--flex">
-                            <div
-                                class="col-xl-2 offset-xl-0 col-lg-2 offset-lg-0 offset-md-0 col-md-2 offset-sm-0 col-sm-2 offset-0 col-2">
-                                <a class="icon__loisir--roller" href="#section__rollerskate"><img
-                                        class="icon__loisir--images" src="images/rollerskate.svg"
-                                        alt="icon de roller skate" /></a>
-                            </div>
-                            <div
-                                class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-2 offset-md-1 col-md-2 offset-sm-2 col-sm-2 offset-2 col-2">
-                                <a class="icon__loisir--arts" href="#section__arts"><img class="icon__loisir--images"
-                                        src="images/arts.svg" alt="icon d'arts" /></a>
-                            </div>
-                            <div
-                                class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-2 offset-md-1 col-md-2 offset-sm-2 col-sm-2 offset-2 col-2">
-                                <a class="icon__loisir--auto" href="#section__automobile"><img
-                                        class="icon__loisir--images" src="images/auto.svg"
-                                        alt="icon d'automobile" /></a>
-                            </div>
-                        </div>
-                        <div class="section__presentation--text">
-                            <p>
-                                Pour ce projet j'ai décider de présenter mes loisirs en de dehor de l'école
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
             <section id="section__rollerskate">
                 <div class="row">
                     <h2>Roller Skate</h2>
@@ -150,64 +113,25 @@
                 </div>
             </section>
 
-            <section id="section__arts">
-                <div class="row">
-                    <h2>Arts</h2>
-                    <div
-                        class="offset-xl-4 col-xl-3 offset-lg-4 col-lg-3 offset-md-4 col-md-3 offset-sm-4 col-sm-4 col-12">
-                        <img src="images/artimg7.jpg" class="image__grille" alt="Photo dune colombe">
+            <secion>
+                <div class="row row--cardrollerskate">
+                    <div class="card col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12">
+                        <img src="images/premiers-patins-plimpton.jpg" class="card-img-top" alt="L'une des premières sortes de patins">
+                        <div class="card-body">
+                            <h2>Les premiers patins</h2>
+                            <a href="#" class="btn btn__card">En savoir plus</a>
+                        </div>
                     </div>
-                    <div
-                        class="offset-xl-0 col-xl-4 offset-lg-0 col-lg-4 offset-md-0 col-md-4 offset-sm-0 col-sm-6 col-12">
-                        <img src="images/artimg1.jpg" class="image__grille--tablette1"
-                            alt="Photo d'un dessin sur tablette">
-                    </div>
-                    <div
-                        class="offset-xl-0 col-xl-4 offset-lg-0 col-lg-4 offset-md-0 col-md-4 offset-sm-0 col-sm-6 col-12">
-                        <img src="images/artimg2.jpg" class="image__grille" alt="Dessin en couleurs">
-                    </div>
-                    <div class="offset-xl-0 col-xl-4 offset-lg-0 col-lg-4 offset-md-0 col-md-4 col-sm-6 col-12">
-                        <img src="images/artimg3.jpg" class="image__grille--fusain" alt="Dessin au fusain">
-                    </div>
-                    <div
-                        class="offset-xl-0 col-xl-4 offset-lg-0 col-lg-4 offset-md-0 col-md-4 offset-sm-0 col-sm-6 col-12">
-                        <img src="images/artimg4.jpg" class="image__grille--diamondpainting" alt="Diamond painting">
-                    </div>
-                    <div
-                        class="offset-xl-2 col-xl-4 offset-lg-2 col-lg-4 offset-md-2 col-md-4 offset-sm-2 col-sm-8 col-12">
-                        <img src="images/artimg5.jpg" class="image__grille" alt="Dessin sur tablette">
-                    </div>
-                    <div
-                        class="offset-xl-0 col-xl-3 offset-lg-0 col-lg-3 offset-md-0 col-md-3 offset-sm-4 col-sm-4 col-12">
-                        <img src="images/artimg6.jpg" class="image__grille--crane" alt="Photo d'un crane">
-                    </div>
-                </div>
-            </section>
 
-            <section id="section__automobile">
-                <div class="row">
-                    <h2>Automobile</h2>
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="images/indexcarrousel1.jpeg" class="d-block w-100"
-                                    alt="Kia, subaru, mitsubishi">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/indexcarrousel2.jpeg" class="d-block w-100" alt="Mitsubishi de côté">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/indexcarrousel3.jpeg" class="d-block w-100"
-                                    alt="Kia, subaru, mitsubishi en angle">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/indexcarrousel4.jpeg" class="d-block w-100"
-                                    alt="mitsubishi de derrière">
-                            </div>
+                    <div class="card col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 col-md-5 offset-md-2 col-sm-12 offset-sm-0 col-12 offset-12">
+                        <img src="images/mespatins.jpg" class="card-img-top" alt="L'une des premières sortes de patins">
+                        <div class="card-body">
+                            <h2>Mes premiers patins</h2>
+                            <a href="#" class="btn btn__card">En savoir plus</a>
                         </div>
                     </div>
                 </div>
-            </section>
+            </secion>
         </div>
     </main>
 
