--- a/automobile.html
+++ b/automobile.html
@@ -128,11 +128,11 @@
 
             <section id="section__automobile">
                 <div class="row">
-                    <div class="col-xl-6">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                         <img src="images/backglass.jpg" class="img__auto" alt="Vitre arrière de mon auto">
                     </div>
 
-                    <div class="col-xl-6">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                         <h2 class="h2--haut">Moi et mon auto !</h2>
                         <p>Je suis tombé en amour avec les autos durant mon cours d'infographie.<br>
                         J'ai un mitsubishi lancer 2014 depuis 5 ans et c'est mon premier amour !<br>
@@ -152,7 +152,7 @@
 
             <section id="section__automobile">
                 <div class="row">
-                    <div class="col-xl-12">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <h2 class="h2--haut">Vers les Ladies !</h2>
                         <div id="outdiv">
                             <iframe class="iframe__website" src="https://www.ladiesonwheelslow.com/" scrolling="yes" width="100%" height="800px"></iframe>
