creations de la 3em section arts

--- a/arts.html
+++ b/arts.html
@@ -166,6 +166,112 @@
                     </div>
                 </div>
             </section>
+
+            <section class="section_arts">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                  Préhistoire
+                                </button>
+                              </h2>
+                              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body"><p>
+                                    Si l'on considère que l'art consiste à bâtir, à sculpter, à réaliser des motifs ornementaux, 
+                                    l'existence d'un art préhistorique semble indiscutable. En revanche, si l'on voit dans l'art une 
+                                    sorte de luxe destiné aux musées et aux expositions, il est probable que les premiers peuples n'y 
+                                    aient jamais songé. Enfin, si l'on considère, plus généralement, que l'art consiste à s'adresser a
+                                    ux sens et aux émotions de ceux qui en sont les spectateurs, il est difficile de ne pas qualifier 
+                                    d'artistes les auteurs d'un certain nombre de productions préhistoriques, comme les célèbres 
+                                    fresques de la grotte de Lascaux.</p>
+
+                                    <p>Quelle était la fonction exacte des sculptures et des peintures réalisées par ces artistes ? 
+                                        Nous ne le savons pas avec certitude, même si les hypothèses de fonctions rituelles, magiques, 
+                                        symboliques ou d'enseignement ont souvent été envisagées. Le travail de l'artiste aurait alors 
+                                        probablement eu comme visée première une efficacité « pratique », sans exclure pour autant une 
+                                        certaine recherche esthétique.</p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="flush-headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                  Antiquité
+                                </button>
+                              </h2>
+                              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">
+                                    <p>
+                                        Bien que celle-ci soit géographiquement située en Afrique, l'Art de l'Égypte antique, né il y a environ 
+                                        cinq mille ans, est l'une des principales sources de l'art en Europe. Il combine des règles strictes de
+                                         régularité géométrique et une observation aiguë de la nature. Ses œuvres n'étaient pas destinées à être 
+                                         admirées par les vivants. On les plaçait dans les tombes des rois, puis progressivement dans celles de 
+                                         personnages de moindre importance sociale, afin d'aider l'âme des défunts à rester vivante.
+                                    </p>
+                                    <p>
+                                        Mais l'art européen doit aussi beaucoup à l'Art de la Grèce antique. Dans ses premiers temps, aux alentours du xe siècle av. 
+                                        J.-C., il est extrêmement sobre et géométrique. Par la suite, il s'inspire considérablement des règles établies par l'art égyptien, 
+                                        notamment en peinture et en sculpture.
+                                    </p>
+                                    <p>
+                                        Aux alentours du vie siècle av. J.-C. se produisit une véritable révolution artistique : Les artistes commencent à 
+                                        s'affranchir des règles de l'art égyptien, qui imposaient de représenter chaque partie d'un ensemble 
+                                        (d'un corps humain par exemple) sous son angle le plus reconnaissable, au prix parfois de positions peu vraisemblables 
+                                        de l'ensemble. S'affranchissant de ces règles, ils se permettent de représenter un pied de face ou de cacher un bras sur 
+                                        un personnage représenté de profil : leurs peintures et leurs sculptures deviennent ainsi moins stéréotypées, plus naturelles.
+                                    </p>
+                                    <p>
+                                        Vers la fin du vie siècle av. J.-C., les artistes grecs sont toujours de simples artisans, mais un public de plus en plus 
+                                        nombreux s'intéresse à leurs œuvres. On compare les mérites des différentes écoles d'art, des maîtres des différentes cités. 
+                                        Certains d'entre eux, comme Praxitèle deviennent extrêmement célèbres. Un peu plus tard survient une autre évolution : 
+                                        alors que jusqu'ici les artistes s'efforçaient d'éviter de donner à leurs visages une expression trop précise, on commence 
+                                        alors à leur faire exprimer des sentiments et le règne d'Alexandre le Grand voit l'apparition d'un art du portrait que 
+                                        l'Art de la Rome antique reprendra et développera plus encore. 
+                                    </p>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                    Moyen Âge
+                                </button>
+                              </h2>
+                              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">
+                                <p>
+                                    L’art médiéval couvre un ensemble large de temps et de lieux, sur plus de mille ans d'histoire de l'art en Europe, au 
+                                    Moyen-Orient et en Afrique du Nord. Cela inclut de nombreux mouvements de l'art et périodes, art régional ou national, 
+                                    genres, renaissances, métiers d'artistes, et les artistes eux-mêmes.
+                                </p>
+                                <p>
+                                    Les historiens de l'Art classifient l'art médiéval en périodes et mouvements principaux, les relations entre 
+                                    ces périodes sont parfois plus subtiles. Ceux-ci sont l'Art celtique, l'Art paléochrétien, l'Art des migrations, 
+                                    l'Art préroman et l'Art roman, l'Art gothique et l'Art byzantin. En plus de cela, chaque « nation » ou culture 
+                                    au Moyen Âge avait son propre style artistique et ceux-ci ont une existence individuelle, 
+                                    comme l'Art anglo-saxon, l'Art viking ou l'Art Islamique en Espagne (pour exemple l'Alhambra).   
+                                </p>
+                                <p>
+                                    L'art médiéval comporte de nombreuses techniques, comme la mosaïque et la sculpture.
+                                </p>
+                                <p>
+                                    L'immense majorité de l'art qui nous est parvenu de cette période relève du domaine du religieux et renvoie à un cadre qui incorpore à 
+                                    la fois une pensée théologique ou cosmogonique et des fonctions proprement liturgiques. À cet aspect strictement religieux, il convient 
+                                    encore d'ajouter une dimension sociale ou civique. Ainsi, une œuvre pourra être étudiée et comprise sous ces différents aspects : 
+                                    un contenu proprement théologique qui s'exprimera souvent par des choix iconologiques de la part du ou des créateurs ; une fonction 
+                                    liturgique ou cérémonielle concrète qui sera une contrainte matérielle de l'œuvre, définissant parfois sa forme, sa structure ou ses 
+                                    dimensions ; une fonction publique d'exaltation du commanditaire, du donateur ou du récipiendaire.
+                                </p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 
