--- a/arts.html
+++ b/arts.html
@@ -52,8 +52,9 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
+                        <a class="btn me-2" type="button" href="index.html">Accueil</a>
                         <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
+                        <a class="btn me-2 btn__active" type="button" href="arts.html">Arts</a>
                         <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
                     </form>
                 </div>
@@ -66,8 +67,9 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
+                        <a class="btn me-2" type="button" href="index.html">Accueil</a>
                         <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
-                        <a class="btn me-2" type="button" href="arts.html">Arts</a>
+                        <a class="btn me-2 btn__active" type="button" href="arts.html">Arts</a>
                         <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
                     </form>
                 </div>
