--- a/automobile.html
+++ b/automobile.html
@@ -52,9 +52,10 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
+                        <a class="btn me-2" type="button" href="index.html">Accueil</a>
                         <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
                         <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
+                        <a class="btn me-2 btn__active" type="button" href="automobile.html">Automobile</a>
                     </form>
                 </div>
             </nav>
@@ -66,9 +67,10 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
+                        <a class="btn me-2" type="button" href="index.html">Accueil</a>
                         <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
                         <a class="btn me-2" type="button" href="arts.html">Arts</a>
-                        <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
+                        <a class="btn me-2 btn__active" type="button" href="automobile.html">Automobile</a>
                     </form>
                 </div>
             </div>
