--- a/confirmation.html
+++ b/confirmation.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,7 +50,7 @@
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
                         <a class="btn me-2" type="button" href="index.html">Accueil</a>
-                        <a class="btn me-2 btn__active" type="button" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
                         <a class="btn me-2" type="button" href="arts.html">Arts</a>
                         <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
                     </form>
@@ -68,7 +65,7 @@
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
                         <a class="btn me-2" type="button" href="index.html">Accueil</a>
-                        <a class="btn me-2 btn__active" type="button" href="rollerskate.html">Roller Skate</a>
+                        <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
                         <a class="btn me-2" type="button" href="arts.html">Arts</a>
                         <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
                     </form>
@@ -104,100 +101,8 @@
     <main>
         <div class="container">
             <section id="section__rollerskate">
-                <div class="row">
-                    <h2>Roller Skate</h2>
-                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <iframe class="section__rollerskate--video" width="560" height="315"
-                            src="https://www.youtube.com/embed/kPcEFHA3X0c" title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
+                <h1>Tu est bien inscrit !</h1>
             </section>
-
-            <secion>
-                <div class="row row--cardrollerskate">
-                    <div class="card col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12">
-                        <img src="images/premiers-patins-plimpton.jpg" class="card-img-top"
-                            alt="L'une des premières sortes de patins">
-                        <div class="card-body">
-                            <h2>Les premiers patins</h2>
-                            <a href="#" class="btn btn__card">En savoir plus</a>
-                        </div>
-                    </div>
-
-                    <div
-                        class="card col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 col-md-5 offset-md-2 col-sm-12 offset-sm-0 col-12 offset-12">
-                        <img src="images/mespatins.jpg" class="card-img-top" alt="L'une des premières sortes de patins">
-                        <div class="card-body">
-                            <h2>Mes premiers patins</h2>
-                            <a href="#" class="btn btn__card">En savoir plus</a>
-                        </div>
-                    </div>
-                </div>
-            </secion>
-
-            <section id="section__rollerskate">
-                <div class="row">
-                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <h2>Toi aussi tu aime le patin, inscrit toi !</h2>
-                        <form id="form" action="confirmation.html" onsubmit="return validateForm()">
-
-                            <div class="input-control">
-                                <label for="usernameInput"> Username :</label>
-                                <input id="usernameInput" name="nomInput" type="text">
-                                <div class="errorMessage"></div>
-                            </div>
-
-                            <div class="input-control">
-                                <label for="courielInput"> Courriel :</label>
-                                <input id="courrielInput" name="courrielInput" type="email">
-                                <div class="errorMessage"></div>
-                            </div>
-
-                            <div class="input-control">
-                                <label for="adresseInput"> Adresse :</label>
-                                <input id="adresseInput" name="adresseInput" type="text">
-                                <div class="errorMessage"></div>
-                            </div>
-
-                            <div class="input-control">
-                                <label for="villeInput"> Ville :</label>
-                                <input id="villeInput" name="villeInput" type="text">
-                                <div class="errorMessage"></div>
-                            </div>
-
-                            <div class="input-control">
-                                <label for="provinceInput"> Province :</label>
-                                <input id="provinceInput" name="provinceInput" type="text">
-                                <div class="errorMessage"></div>
-                            </div>
-
-                            <div class="input-control">
-                                <label for="paysInput"> Pays :</label>
-                                <input id="paysInput" name="paysInput" type="text">
-                                <div class="errorMessage"></div>
-                            </div>
-
-                            <div class="input-control">
-                                <label for="passwordInput"> Mot de passe :</label>
-                                <input id="passwordInput" name="passwordInput" type="password">
-                                <div class="errorMessage"></div>
-                            </div>
-
-                            <div class="input-control">
-                                <label for="password2Input">Confirmer votre mot de passe : </label>
-                                <input id="password2Input" name="passwordConfirmationInput" type="password">
-                                <div class="errorMessage"></div>
-                            </div>
-
-                            <input class="btn btn__card" type="submit" name="submit" id="submit">
-
-                        </form>
-                        <script src="validation.js"></script>
-                    </div>
-            </section>
-        </div>
         </div>
     </main>
 
