--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
+                        <a class="btn me-2 btn__active" type="button" href="index.html">Accueil</a>
                         <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
                         <a class="btn me-2" type="button" href="arts.html">Arts</a>
                         <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
@@ -66,6 +67,7 @@
                     <form class="container-fluid headerNav__flex--menu">
                         <a class="nav-link px-lg-4 px-2" id="btnInstall" aria-label="Install" hidden>Installer la
                             PWA</a>
+                        <a class="btn me-2 btn__active" type="button" href="index.html">Accueil</a>
                         <a class="btn me-2" type="button" href="rollerskate.html">Roller Skate</a>
                         <a class="btn me-2" type="button" href="arts.html">Arts</a>
                         <a class="btn me-2" type="button" href="automobile.html">Automobile</a>
@@ -74,7 +76,7 @@
             </div>
             <nav class="navbar navbar-dark headerNav__burger">
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row row--cardrollerskate">
 
                         <div class="navbar__burger--flex">
                             <div class="headerNav__flex--logo">
